--- a/CenkerDemirViaflyTestProject/Podfile
+++ b/CenkerDemirViaflyTestProject/Podfile
@@ -6,5 +6,5 @@ target 'CenkerDemirViaflyTestProject' do
   use_frameworks!
 
   # Pods for CenkerDemirViaflyTestProject
-  pod 'BarcodeScanner'
+  #pod 'BarcodeScanner'
 end
